--- a/impacto/index.html
+++ b/impacto/index.html
@@ -151,6 +151,244 @@
                             <td style="font-weight: bold"><span id="merge3"></span></td>
                         </tr>
                     </tbody>
+                    <thead>
+                        <tr>
+                            <th colspan="2">4º Lugar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td colspan="2"><img id="img3" src="" style="display: none; margin: auto;"></td>
+                        </tr>
+                        <tr>
+                            <td>Miner:</td>
+                            <td style="font-weight: bold"><span id="nome3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Poder:</td>
+                            <td style="font-weight: bold"><span id="poder3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Bônus:</td>
+                            <td style="font-weight: bold"><span id="bonus3"></span></td>
+                        </tr>
+                        <tr>
+                            <td style="font-weight: bold">Impacto Total:</td>
+                            <td style="font-weight: bold"><span id="impact3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Faz parte de Set?</td>
+                            <td style="font-weight: bold"><span id="set3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Repetida/Merge?</td>
+                            <td style="font-weight: bold"><span id="merge3"></span></td>
+                        </tr>
+                    </tbody>
+                    <thead>
+                        <tr>
+                            <th colspan="2">5º Lugar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td colspan="2"><img id="img3" src="" style="display: none; margin: auto;"></td>
+                        </tr>
+                        <tr>
+                            <td>Miner:</td>
+                            <td style="font-weight: bold"><span id="nome3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Poder:</td>
+                            <td style="font-weight: bold"><span id="poder3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Bônus:</td>
+                            <td style="font-weight: bold"><span id="bonus3"></span></td>
+                        </tr>
+                        <tr>
+                            <td style="font-weight: bold">Impacto Total:</td>
+                            <td style="font-weight: bold"><span id="impact3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Faz parte de Set?</td>
+                            <td style="font-weight: bold"><span id="set3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Repetida/Merge?</td>
+                            <td style="font-weight: bold"><span id="merge3"></span></td>
+                        </tr>
+                    </tbody>
+                    <thead>
+                        <tr>
+                            <th colspan="2">6º Lugar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td colspan="2"><img id="img3" src="" style="display: none; margin: auto;"></td>
+                        </tr>
+                        <tr>
+                            <td>Miner:</td>
+                            <td style="font-weight: bold"><span id="nome3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Poder:</td>
+                            <td style="font-weight: bold"><span id="poder3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Bônus:</td>
+                            <td style="font-weight: bold"><span id="bonus3"></span></td>
+                        </tr>
+                        <tr>
+                            <td style="font-weight: bold">Impacto Total:</td>
+                            <td style="font-weight: bold"><span id="impact3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Faz parte de Set?</td>
+                            <td style="font-weight: bold"><span id="set3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Repetida/Merge?</td>
+                            <td style="font-weight: bold"><span id="merge3"></span></td>
+                        </tr>
+                    </tbody>
+                    <thead>
+                        <tr>
+                            <th colspan="2">7º Lugar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td colspan="2"><img id="img3" src="" style="display: none; margin: auto;"></td>
+                        </tr>
+                        <tr>
+                            <td>Miner:</td>
+                            <td style="font-weight: bold"><span id="nome3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Poder:</td>
+                            <td style="font-weight: bold"><span id="poder3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Bônus:</td>
+                            <td style="font-weight: bold"><span id="bonus3"></span></td>
+                        </tr>
+                        <tr>
+                            <td style="font-weight: bold">Impacto Total:</td>
+                            <td style="font-weight: bold"><span id="impact3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Faz parte de Set?</td>
+                            <td style="font-weight: bold"><span id="set3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Repetida/Merge?</td>
+                            <td style="font-weight: bold"><span id="merge3"></span></td>
+                        </tr>
+                    </tbody>
+                    <thead>
+                        <tr>
+                            <th colspan="2">8º Lugar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td colspan="2"><img id="img3" src="" style="display: none; margin: auto;"></td>
+                        </tr>
+                        <tr>
+                            <td>Miner:</td>
+                            <td style="font-weight: bold"><span id="nome3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Poder:</td>
+                            <td style="font-weight: bold"><span id="poder3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Bônus:</td>
+                            <td style="font-weight: bold"><span id="bonus3"></span></td>
+                        </tr>
+                        <tr>
+                            <td style="font-weight: bold">Impacto Total:</td>
+                            <td style="font-weight: bold"><span id="impact3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Faz parte de Set?</td>
+                            <td style="font-weight: bold"><span id="set3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Repetida/Merge?</td>
+                            <td style="font-weight: bold"><span id="merge3"></span></td>
+                        </tr>
+                    </tbody>
+                    <thead>
+                        <tr>
+                            <th colspan="2">9º Lugar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td colspan="2"><img id="img3" src="" style="display: none; margin: auto;"></td>
+                        </tr>
+                        <tr>
+                            <td>Miner:</td>
+                            <td style="font-weight: bold"><span id="nome3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Poder:</td>
+                            <td style="font-weight: bold"><span id="poder3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Bônus:</td>
+                            <td style="font-weight: bold"><span id="bonus3"></span></td>
+                        </tr>
+                        <tr>
+                            <td style="font-weight: bold">Impacto Total:</td>
+                            <td style="font-weight: bold"><span id="impact3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Faz parte de Set?</td>
+                            <td style="font-weight: bold"><span id="set3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Repetida/Merge?</td>
+                            <td style="font-weight: bold"><span id="merge3"></span></td>
+                        </tr>
+                    </tbody>
+                    <thead>
+                        <tr>
+                            <th colspan="2">10º Lugar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td colspan="2"><img id="img3" src="" style="display: none; margin: auto;"></td>
+                        </tr>
+                        <tr>
+                            <td>Miner:</td>
+                            <td style="font-weight: bold"><span id="nome3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Poder:</td>
+                            <td style="font-weight: bold"><span id="poder3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Bônus:</td>
+                            <td style="font-weight: bold"><span id="bonus3"></span></td>
+                        </tr>
+                        <tr>
+                            <td style="font-weight: bold">Impacto Total:</td>
+                            <td style="font-weight: bold"><span id="impact3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Faz parte de Set?</td>
+                            <td style="font-weight: bold"><span id="set3"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Repetida/Merge?</td>
+                            <td style="font-weight: bold"><span id="merge3"></span></td>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
         </div>
