--- a/impacto/index.html
+++ b/impacto/index.html
@@ -82,6 +82,10 @@
                             <td>Repetida/Merge:</td>
                             <td style="font-weight: bold"><span id="merge1"></span></td>
                         </tr>
+                        <tr>
+                            <td>Localização:</td>
+                            <td style="font-weight: bold"><span id="rack1"></span></td>
+                        </tr>
                     </tbody>
                     <thead>
                         <tr>
@@ -115,6 +119,10 @@
                         <tr>
                             <td>Repetida/Merge:</td>
                             <td style="font-weight: bold"><span id="merge2"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Localização:</td>
+                            <td style="font-weight: bold"><span id="rack2"></span></td>
                         </tr>
                     </tbody>
                     <thead>
@@ -150,6 +158,10 @@
                             <td>Repetida/Merge?</td>
                             <td style="font-weight: bold"><span id="merge3"></span></td>
                         </tr>
+                        <tr>
+                            <td>Localização:</td>
+                            <td style="font-weight: bold"><span id="rack3"></span></td>
+                        </tr>
                     </tbody>
                     <thead>
                         <tr>
@@ -183,6 +195,10 @@
                         <tr>
                             <td>Repetida/Merge?</td>
                             <td style="font-weight: bold"><span id="merge4"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Localização:</td>
+                            <td style="font-weight: bold"><span id="rack4"></span></td>
                         </tr>
                     </tbody>
                     <thead>
@@ -218,6 +234,10 @@
                             <td>Repetida/Merge?</td>
                             <td style="font-weight: bold"><span id="merge5"></span></td>
                         </tr>
+                        <tr>
+                            <td>Localização:</td>
+                            <td style="font-weight: bold"><span id="rack5"></span></td>
+                        </tr>
                     </tbody>
                     <thead>
                         <tr>
@@ -251,6 +271,10 @@
                         <tr>
                             <td>Repetida/Merge?</td>
                             <td style="font-weight: bold"><span id="merge6"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Localização:</td>
+                            <td style="font-weight: bold"><span id="rack6"></span></td>
                         </tr>
                     </tbody>
                     <thead>
@@ -286,6 +310,10 @@
                             <td>Repetida/Merge?</td>
                             <td style="font-weight: bold"><span id="merge7"></span></td>
                         </tr>
+                        <tr>
+                            <td>Localização:</td>
+                            <td style="font-weight: bold"><span id="rack7"></span></td>
+                        </tr>
                     </tbody>
                     <thead>
                         <tr>
@@ -319,6 +347,10 @@
                         <tr>
                             <td>Repetida/Merge?</td>
                             <td style="font-weight: bold"><span id="merge8"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Localização:</td>
+                            <td style="font-weight: bold"><span id="rack8"></span></td>
                         </tr>
                     </tbody>
                     <thead>
@@ -354,6 +386,10 @@
                             <td>Repetida/Merge?</td>
                             <td style="font-weight: bold"><span id="merge9"></span></td>
                         </tr>
+                        <tr>
+                            <td>Localização:</td>
+                            <td style="font-weight: bold"><span id="rack9"></span></td>
+                        </tr>
                     </tbody>
                     <thead>
                         <tr>
@@ -387,6 +423,10 @@
                         <tr>
                             <td>Repetida/Merge?</td>
                             <td style="font-weight: bold"><span id="merge10"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Localização:</td>
+                            <td style="font-weight: bold"><span id="rack10"></span></td>
                         </tr>
                     </tbody>
                 </table>
