--- a/salaperfeita/index.html
+++ b/salaperfeita/index.html
@@ -56,12 +56,19 @@
 
   <div class="container">
     <div class="field">
-      <label for="field1">Campo 1</label>
+      <label for="field1">Link da Sala</label>
       <input type="text" id="field1" placeholder="Digite o valor do Campo 1">
     </div>
     <div class="field">
-      <label for="field2">Campo 2</label>
+      <label for="field2">Inventário</label>
       <input type="text" id="field2" placeholder="Digite o valor do Campo 2">
+    </div>
+    <div class="field">
+      <label">Quantas Salas?</label>
+      <input type="radio" name="capacity" value="96" id="capacity96"> 96
+      <input type="radio" name="capacity" value="240" id="capacity240"> 240
+      <input type="radio" name="capacity" value="384" id="capacity384"> 384
+      <input type="radio" name="capacity" value="528" checked id="capacity528"> 528
     </div>
     <div class="button-container">
       <button onclick="organizar()">ORGANIZAR</button>
