--- a/queima/index.html
+++ b/queima/index.html
@@ -64,7 +64,7 @@
       <input type="text" id="field2" placeholder="Digite o valor do Campo 2">
     </div>
     <div class="field">
-      <label">Quantas Salas?</label>
+      <label>Quantas Salas?</label>
       <input type="radio" name="capacity" value="96" id="capacity96">96
       <input type="radio" name="capacity" value="240" id="capacity240">240
       <input type="radio" name="capacity" value="384" id="capacity384">384
