--- a/queima/index.html
+++ b/queima/index.html
@@ -56,19 +56,19 @@
 
   <div class="container">
     <div class="field">
-      <label for="field1">Link da Sala</label>
-      <input type="text" id="field1" placeholder="Digite o valor do Campo 1">
+      <label for="field1">Link da Sala (após /p/)</label>
+      <input type="text" id="field1" placeholder="RKFox">
     </div>
     <div class="field">
       <label for="field2">Inventário</label>
-      <input type="text" id="field2" placeholder="Digite o valor do Campo 2">
+      <input type="text" id="field2" placeholder="Cole os dados do seu inventário">
     </div>
     <div class="field">
-      <label>Quantas Salas?</label>
-      <input type="radio" name="capacity" value="96" id="capacity96">96
-      <input type="radio" name="capacity" value="240" id="capacity240">240
-      <input type="radio" name="capacity" value="384" id="capacity384">384
-      <input type="radio" name="capacity" value="528" checked id="capacity528">528
+      <label>Conversão de Pontos</label>
+      <label for="field1">Quantos Ths por 1000 pontos?</label>
+      <input type="text" id="field3" value="100">
+      <label for="field1">Quantos % por 1000 pontos?</label>
+      <input type="text" id="field4" value="10">
     </div>
     <div class="button-container">
       <button onclick="organizar()">ORGANIZAR</button>
