--- a/queima/index.html
+++ b/queima/index.html
@@ -56,6 +56,9 @@
 
   <div class="container">
     <div class="field">
+      <label for="tutorial">vídeo tutorial: youtube(em breve)</label>
+    </div>
+    <div class="field">
       <label for="field1">Link da Sala (após /p/)</label>
       <input type="text" id="field1" placeholder="RKFox">
     </div>
