--- a/queima/index.html
+++ b/queima/index.html
@@ -30,6 +30,7 @@
             <input type="checkbox" id="toggle-dark-mode">
             <span class="slider"></span>
         </label>
+     <div class="container"> 
     <div class="field">
       <label for="tutorial">vídeo tutorial: youtube(em breve)</label>
     </div>
@@ -51,6 +52,7 @@
     <div class="button-container">
       <button onclick="organizar()">ORGANIZAR</button>
     </div>
+     </div>
   </div>
   <script src="queima.js"></script>
   <script src="script2.js"></script>
