--- a/queima/index.html
+++ b/queima/index.html
@@ -31,13 +31,13 @@
             <span class="slider"></span>
         </label>
      <div class="container"> 
-    <div class="field">
-      <label for="tutorial">vídeo tutorial: youtube(em breve)</label>
-    </div>
+         <h1>Planejador de Queima</h1>
+      <h3>vídeo tutorial: youtube(em breve)</h3>
     <div class="field">
       <label for="field1">Link da Sala (após /p/)</label>
       <input type="text" id="field1" placeholder="RKFox">
     </div>
+         <div class="input-container">
     <div class="field">
       <label for="field2">Inventário</label>
       <input type="text" id="field2" placeholder="Cole os dados do seu inventário">
@@ -53,6 +53,7 @@
       <button onclick="organizar()">ORGANIZAR</button>
     </div>
      </div>
+  </div>
   </div>
   <script src="queima.js"></script>
   <script src="script2.js"></script>
