--- a/queima/index.html
+++ b/queima/index.html
@@ -67,7 +67,12 @@
         </div>
     </div>
   </div>
-  
+  <div class="container">
+      <table id="salaneg" style="display: none;"></table>
+      <table id="salaineg" style="display: none;"></table>
+      <table id="invneg" style="display: none;"></table>
+      <table id="invineg" style="display: none;"></table>
+  </div>
   <script src="queima.js"></script>
   <script src="script2.js"></script>
 </body>
