--- a/queima/index.html
+++ b/queima/index.html
@@ -63,7 +63,7 @@
 
         <!-- Button Container -->
         <div class=input-container">
-            <button onclick="organizar()">ORGANIZAR</button>
+            <button id="searchButton" onclick="organizar()">ORGANIZAR</button>
         </div>
     </div>
   <div class="container">
