--- a/queima/index.html
+++ b/queima/index.html
@@ -39,30 +39,30 @@
         <h3>vídeo tutorial: youtube(em breve)</h3>
         
         <!-- Form Fields -->
-        <div class=input-container">
+        <div class="input-container">
             <label for="field1">Link da Sala (após /p/)</label>
             <input type="text" id="field1" placeholder="RKFox">
         </div>
 
-        <div class=input-container">
+        <div class="input-container">
             <label for="field2">Inventário</label>
             <input type="text" id="field2" placeholder="Cole os dados do seu inventário">
         </div>
 
-        <div class=input-container">
+        <div class="input-container">
             <label for="field3">Conversão de Pontos</label>
             <div class="conversion-fields">
                 <label for="field3">Quantos Ths por 1000 pontos?</label>
                 <input type="text" id="field3" value="100">
             </div>
-            <div class=input-container">
+            <div class="input-container">
                 <label for="field4">Quantos % por 1000 pontos?</label>
                 <input type="text" id="field4" value="10">
             </div>
         </div>
 
         <!-- Button Container -->
-        <div class=input-container">
+        <div class="input-container">
             <button id="searchButton" onclick="organizar()">ORGANIZAR</button>
         </div>
     </div>
