--- a/queima/index.html
+++ b/queima/index.html
@@ -50,15 +50,12 @@
         </div>
 
         <div class="input-container">
-            <label for="field3">Conversão de Pontos</label>
-            <div class="conversion-fields">
+            <h3>Conversão de Pontos</h3>            
                 <label for="field3">Quantos Ths por 1000 pontos?</label>
                 <input type="text" id="field3" value="100">
-            </div>
-            <div class="input-container">
+            <br>
                 <label for="field4">Quantos % por 1000 pontos?</label>
                 <input type="text" id="field4" value="10">
-            </div>
         </div>
 
         <!-- Button Container -->
