--- a/queima/index.html
+++ b/queima/index.html
@@ -50,8 +50,10 @@
         </div>
 
         <!-- Conversão de Pontos -->
-        <div class="input-container">
+        <div>
+        <div class="container">
             <h3>Conversão de Pontos</h3>
+            </div>
             <div class="conversion-row">
                 <label for="field3">Quantos Ths por 1000 pontos?</label>
                 <input type="text" id="field3" value="100">
