--- a/queima/index.html
+++ b/queima/index.html
@@ -36,17 +36,17 @@
     
     <div class="calc">
         <h1>Planejador de Queima</h1>
-        <h3>vídeo tutorial: youtube(em breve)</h3>
+        <h3>Tutorial: youtube(em breve)</h3>
         
         <!-- Form Fields -->
         <div class="input-container">
             <label for="field1">Link da Sala (após /p/)</label>
-            <input type="text" id="field1" placeholder="RKFox">
+            <input type="text" id="field1" class="textInput" placeholder="RKFox">
         </div>
 
         <div class="input-container">
             <label for="field2">Inventário</label>
-            <input type="text" id="field2" placeholder="Cole os dados do seu inventário">
+            <input type="text" id="field2" class="textInput" placeholder="Cole os dados do seu inventário">
         </div>
 
         <!-- Conversão de Pontos -->
@@ -56,11 +56,11 @@
             </div>
             <div class="conversion-row">
                 <label for="field3">Quantos Ths por 1000 pontos?</label>
-                <input type="text" id="field3" value="100">
+                <input type="text" class="textInput" id="field3" value="100">
             </div>
             <div class="conversion-row">
                 <label for="field4">Quantos % por 1000 pontos?</label>
-                <input type="text" id="field4" value="10">
+                <input type="text" class="textInput" id="field4" value="10">
             </div>
         </div>
 
