--- a/queima/index.html
+++ b/queima/index.html
@@ -40,12 +40,12 @@
         
         <!-- Form Fields -->
         <div class="input-container">
-            <label for="field1">Link da Sala (após /p/)</label>
+            <h3>Link da Sala (após /p/)</h3>
             <input type="text" id="field1" class="textInput" placeholder="RKFox">
         </div>
-
+<br>
         <div class="input-container">
-            <label for="field2">Inventário</label>
+            <h3>Dados do Inventário</h3>
             <input type="text" id="field2" class="textInput" placeholder="Cole os dados do seu inventário">
         </div>
 
@@ -55,11 +55,11 @@
             <h3>Conversão de Pontos</h3>
             </div>
             <div class="conversion-row">
-                <label for="field3">Quantos Ths por 1000 pontos?</label>
+                <h4>Quantos Ths por 1000 pontos?</h4>
                 <input type="text" class="textInput" id="field3" value="100">
             </div>
             <div class="conversion-row">
-                <label for="field4">Quantos % por 1000 pontos?</label>
+                <h4>Quantos % por 1000 pontos?</h4>
                 <input type="text" class="textInput" id="field4" value="10">
             </div>
         </div>
@@ -71,10 +71,10 @@
     </div>
 
     <div class="container">
-        <table id="salaneg" style="display: none;"></table>
-        <table id="salaineg" style="display: none;"></table>
-        <table id="invneg" style="display: none;"></table>
-        <table id="invineg" style="display: none;"></table>
+        <table id="salaneg" style="display: none;"><caption>Miners da Sala NEGOCIÁVEIS</caption></table>
+        <table id="salaineg" style="display: none;"><caption>Miners da Sala INEGOCIÁVEIS</caption></table>
+        <table id="invneg" style="display: none;"><caption>Miners da Inventário NEGOCIÁVEIS</caption></table>
+        <table id="invineg" style="display: none;"><caption>Miners da Inventário INEGOCIÁVEIS</caption></table>
     </div>
   </div>
   
