--- a/queima/index.html
+++ b/queima/index.html
@@ -38,7 +38,7 @@
         <h1>Planejador de Queima</h1>
         <h3>Tutorial: youtube(em breve)</h3>
         
-        <!-- Form Fields -->
+        <div class="container">
         <div class="input-container">
             <h3>Link da Sala (após /p/)</h3>
             <input type="text" id="field1" class="textInput" placeholder="RKFox">
@@ -75,6 +75,7 @@
         <table id="salaineg" style="display: none;"><caption>Miners da Sala INEGOCIÁVEIS</caption></table>
         <table id="invneg" style="display: none;"><caption>Miners da Inventário NEGOCIÁVEIS</caption></table>
         <table id="invineg" style="display: none;"><caption>Miners da Inventário INEGOCIÁVEIS</caption></table>
+    </div>
     </div>
   </div>
   
