--- a/queima/index.html
+++ b/queima/index.html
@@ -54,11 +54,11 @@
             <div>
             <h3>Conversão de Pontos</h3>
             </div>
-            <div class="conversion-row">
+            <div class="input-container">
                 <h4>Quantos Ths por 1000 pontos?</h4>
                 <input type="text" class="textInput" id="field3" value="100">
             </div>
-            <div class="conversion-row">
+            <div class="input-container">
                 <h4>Quantos % por 1000 pontos?</h4>
                 <input type="text" class="textInput" id="field4" value="10">
             </div>
