--- a/queima/index.html
+++ b/queima/index.html
@@ -40,13 +40,11 @@
         
         <div class="container">
         <div class="input-container">
-            <h3>Link da Sala (após /p/)</h3>
-            <br>
+            <label>Link da Sala (após /p/)</label>
             <input type="text" id="field1" class="textInput" placeholder="RKFox">
         </div>
         <div class="input-container">
-            <h3>Dados do Inventário</h3>
-            <br>
+            <label>Dados do Inventário</label>
             <input type="text" id="field2" class="textInput" placeholder="Cole os dados do seu inventário">
         </div>
 
@@ -56,13 +54,15 @@
             <h3>Conversão de Pontos</h3>
             </div>
             <div class="input-container">
-                <h4>Quantos Ths por 1000 pontos?</h4>
-                <br>
+                <div>
+            <h3>Quantos Ths por 1000 pontos?</h3>
+            </div>
                 <input type="text" class="textInput" id="field3" value="100">
             </div>
             <div class="input-container">
-                <h4>Quantos % por 1000 pontos?</h4>
-                <br>
+                <div>
+            <h3>Quantos % por 1000 pontos?</h3>
+            </div>
                 <input type="text" class="textInput" id="field4" value="10">
             </div>
         </div>
